--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
-
+#Connection properties
+spring.datasource.url=jdbc:mysql://localhost:3306/db_concessionaria
+spring.datasource.username=root
+spring.datasource.password=RootPassword
+#  Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto=create-drop
+#Log SQL
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.mvc.format.date=yyyy-MM-dd
+spring.mvc.format.date-time=yyyy-MM-dd HH:mm:ss
+spring.mvc.format.time=HH:mm:ss
