--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #Connection properties
-spring.datasource.url=jdbc:mysql://localhost:3306/db_concessionaria
-spring.datasource.username=root
-spring.datasource.password=RootPassword
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
 #  Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto=create-drop
 #Log SQL
